# poker-tactics

./: .dockerignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  game-rules.md
client/: index.html  package-lock.json  package.json
client/src/: App.vue  i18n.ts  main.ts
client/src/components/: CardComponent.vue  GameBoard.vue  GameInstructions.vue  LanguageSwitcher.vue
client/src/locales/: en.json  zh-CN.json  zh-TW.json
client/src/stores/: game.ts  user.ts
client/src/types/: poker.ts
client/src/utils/: sound.ts
server/: .gitignore  Cargo.toml
server/src/: game_logic.rs  game_types.rs  main.rs  main.rs.bak2
