[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
socketioxide = "0.18.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
